TASK: Change fix to keep vertical-align:top; by default

--- a/scss/components/_normalize.scss
+++ b/scss/components/_normalize.scss
@@ -82,5 +82,10 @@ table, tr, td, th {
   padding-right: 0;
   padding-bottom: 0;
   padding-left: 0;
+  vertical-align: top;
   text-align: left;
+}
+
+table, tr, td:not([valign]), th:not([valign]) {
+  vertical-align: top;
 }
